--- a/payment/templates/payment/sucess.html
+++ b/payment/templates/payment/sucess.html
@@ -2,7 +2,7 @@
 <body>
 <head>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="jquery.redirect.js"></script>
+  <!-- <script src="jquery.redirect.js"></script> -->
 </head>
 <div style="display:none">
    	<input type="hidden" name="csrfmiddlewaretoken" value="{% csrf_token %}">
